# Mihiraki-PDF-Viewer

./: .gitignore  Mihiraki.py  README.md  pyproject.toml  readme.txt  version.txt
assets/: create_icon.py
