[project]
name = "mihiraki"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pymupdf (>=1.27.2.3,<2.0.0.0)",
    "pypdfium2 (>=5.7.1,<6.0.0)",
    "pyside6 (>=6.11.0,<7.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "pyinstaller (>=6.20.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "mihiraki", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
